@@ -108,7 +108,7 @@ corner, and the width and height.
 
 <a name=Surface><font size=+2><b>Surface
 </b></font><br><font size=+1><tt>
-pygame.Surface(size, [flags, [depth|Surface, [masks]]]) -> Surface
+pygame.Surface(size, [flags, [Surface|depth, [masks]]]) -> Surface
 </tt></font><ul>
 Creates a new surface object. Size is a 2-int-sequence containing
 width and height. Depth is the number of bits used per pixel. If
@@ -116,16 +116,13 @@ omitted, depth will use the current display depth. Masks is a
 four item sequence containing the bitmask for r,g,b, and a. If
 omitted, masks will default to the usual values for the given
 bitdepth. Flags is a mix of the following flags: SWSURFACE,
-HWSURFACE, ASYNCBLIT, SRCCOLORKEY, or SRCALPHA. (flags = 0 is the
-same as SWSURFACE). depth and masks can be substituted for
+HWSURFACE, ASYNCBLIT, or SRCALPHA. (flags = 0 is the
+same as SWSURFACE). Depth and masks can be substituted for
 another surface object which will create the new surface with the
 same format as the given one. When using default masks, alpha
-will always be ignored. Note, if you pass SRCOLORKEY and/or
-SRCALPHA, the surface won't immediately have these features
-enabled. SDL will use these flags to help optimize the surface
-for use with the blitters. Also, for a plain software surface, 0
-can be used for the flag. A plain hardware surface can just use 1
-for the flag.
+will always be ignored unless you pass SRCALPHA as a flag.
+For a plain software surface, 0 can be used for the flag. 
+A plain hardware surface can just use 1 for the flag.
 </ul><br>&nbsp;<br>
 
 <a name=get_error><font size=+2><b>get_error
